# plane

./: 实训报告.docx  飞机大战.pptx
plane/: Actions.qml  Bgm.qml  Boom.qml  Bullet.qml  CMakeLists.txt  CMakeLists_BACKUP_43605.txt  CMakeLists_BASE_42363.txt  CMakeLists_REMOTE_43752.txt  Content.qml  Content_BACKUP_43034.qml  Content_BACKUP_61649.qml  Content_BASE_61649.qml  Content_LOCAL_42524.qml  Content_LOCAL_61649.qml  Content_REMOTE_61649.qml  Dialogs.qml  Enemy.qml  Items.qml  Map.qml  Myplane.qml  Window.qml  main.cpp
